# oragraphrag

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  benchmark_results.json  config.yaml.example  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/graphify/: README.md  SKILL.md
benchmarks/corpora/oracle_docs/: ai_vector_search.md  ann.md  errors.md  indexes.md  json_duality.md  plsql.md  property_graphs.md  vectors.md
benchmarks/suites/: README.md  oracle_docs_qa.jsonl
docs/superpowers/plans/: 2026-05-18-oragraphrag.md
docs/superpowers/specs/: 2026-05-18-oragraphrag-design.md
notebooks/: oragraphrag_demo.ipynb
paper/: paper.tex
paper/tables/: main.tex
src/oragraphrag/: __init__.py  __main__.py  answer.py  axes.py  cli.py  config.py  embed.py  embed_backends.py  export.py  extract.py  graph.py  ingest.py  ingest_records.py  llm.py  memory.py  pipeline_ingest.py  pipeline_query.py  retrieve.py  viz.py
src/oragraphrag/bench/: judge.py  metrics.py  runner.py
src/oragraphrag/bench/baselines/: __init__.py  graphrag.py  graphrag.py.disabled  lightrag.py  lightrag.py.disabled  naive_rag.py  oragraphrag.py
src/oragraphrag/prompts/: answer.j2  extract.j2  judge.j2
src/oragraphrag/sql/: schema.sql
tests/: conftest.py  test_answer.py  test_bench.py  test_cli.py  test_config.py  test_embed.py  test_embed_backends.py  test_export.py  test_extract.py  test_graph.py  test_import.py  test_ingest.py  test_llm.py  test_memory.py  test_pipeline_ingest.py  test_pipeline_query.py  test_retrieve.py  test_viz.py
tests/fixtures/sample_docs/: a.md
tests/integration/: test_continual_learning.py  test_end_to_end.py  test_export.py
tests/integration/fixtures/mini_corpus/: concepts.md
