[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oragraphrag"
version = "0.1.0"
description = "Oracle-backed graph-augmented RAG with query-conditioned dynamic edge reweighting"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "jasperan" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "oracledb>=2.2",
  "numpy>=1.26",
  "igraph>=0.11",
  "jinja2>=3.1",
  "httpx>=0.27",
  "oci>=2.126",
  "pyyaml>=6.0",
  "tiktoken>=0.7",
  "pypdf>=4.2",
  "markdown-it-py>=3.0",
  "tree-sitter>=0.22",
  "tree-sitter-languages>=1.10",
  "tenacity>=8.3",
]

[project.optional-dependencies]
notebook = ["jupyter", "pyvis", "matplotlib"]
sentence-transformers = ["sentence-transformers>=3.0"]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10",
]

[project.scripts]
oragraphrag = "oragraphrag.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "oracle: requires a running Oracle 23ai Free instance",
  "llm: requires a configured LLM endpoint (OCI or Ollama)",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
