[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oragraphrag"
version = "0.1.0"
description = "Oracle-backed graph-augmented RAG with query-conditioned dynamic edge reweighting"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "jasperan" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "oracledb>=2.2",
  "numpy>=1.26",
  "igraph>=0.11",
  "jinja2>=3.1",
  "httpx>=0.27",
  "oci>=2.126",
  "pyyaml>=6.0",
  "tiktoken>=0.7",
  "pypdf>=4.2",
  "markdown-it-py>=3.0",
  "tree-sitter>=0.23,<0.25",
  "tree-sitter-language-pack>=0.5",
  "tenacity>=8.3",
]

[project.scripts]
oragraphrag = "oragraphrag.cli:app"

[project.optional-dependencies]
notebook = ["jupyterlab>=4.0", "pyvis>=0.3", "matplotlib>=3.8"]
sentence-transformers = ["sentence-transformers>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
markers = [
  "oracle: requires a running Oracle 23ai Free instance",
  "llm: requires a configured LLM endpoint (OCI or Ollama)",
]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]
